[package]
name = "xnode-manager-sdk"
description = "Rust Software Development Kit for interacting with Xnode Manager"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Openmesh-Network/xnode-manager-sdk"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
